--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% include 'modals/alert_modal.html'%}
+{% include 'modals/alert_modal_user.html'%}
 {% load precios_tag %}
 {% load static %}
 <!DOCTYPE html>
