--- a/adminPanel/templates/gestion_productos/filtros/filtro_marca.html
+++ b/adminPanel/templates/gestion_productos/filtros/filtro_marca.html
@@ -1,16 +1,21 @@
-<form action="{% url 'buscar_marca' %}" method="GET">
-    <select name="searchMarca" value="{{queryMarca}}">
-        <option  disabled {% if not queryMarca %}selected{% endif %}>Buscar por marca</option>
-        {% for brand in brands %}
-            <option value="{{ brand.name }}" {% if brand.name == queryMarca %}selected{% endif %}>
-                {{ brand.name }}
-            </option>
-        {% endfor %}
-        {% if queryMarca %}
-            <option value="borrarFiltro">Borrar filtro</option>
-        {% endif %}
-    </select>
-    <button type="submit" class="btn btn-primary">
-        Buscar marca
+<form action="{% url 'buscar_marca' %}" method="GET" class="space-y-4">
+    <div class="relative">
+        <svg class="absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 7h.01M7 3h5c.512 0 1.024.195 1.414.586l7 7a2 2 0 010 2.828l-7 7a2 2 0 01-2.828 0l-7-7A1.994 1.994 0 013 12V7a4 4 0 014-4z"></path>
+        </svg>
+        <select name="searchMarca" class="w-full pl-10 pr-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent">
+            <option disabled {% if not queryMarca %}selected{% endif %}>Buscar por marca</option>
+            {% for brand in brands %}
+                <option value="{{ brand.name }}" {% if brand.name == queryMarca %}selected{% endif %}>
+                    {{ brand.name }}
+                </option>
+            {% endfor %}
+            {% if queryMarca %}
+                <option value="borrarFiltro">Borrar filtro</option>
+            {% endif %}
+        </select>
+    </div>
+    <button type="submit" class="w-full bg-blue-500 text-white py-2 px-4 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+        Buscar Marca
     </button>
 </form>
