--- a/adminPanel/templates/gestion_productos/filtros/filtro_sku.html
+++ b/adminPanel/templates/gestion_productos/filtros/filtro_sku.html
@@ -1,6 +1,11 @@
-<form action="{% url 'buscar_sku' %}" method="GET">
-    <input type="text" name="searchSku" value="{{ queryOrden }}"> 
-    <button type="submit" class="btn btn-primary" >
-        Buscar Sku
+<form action="{% url 'buscar_sku' %}" method="GET" class="space-y-4">
+    <div class="relative">
+        <svg class="absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+        </svg>
+        <input type="text" name="searchSku" value="{{ queryOrden }}" class="w-full pl-10 pr-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent" placeholder="Buscar por SKU..." />
+    </div>
+    <button type="submit" class="w-full bg-blue-500 text-white py-2 px-4 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+        Buscar SKU
     </button>
 </form>
